set deflateBuffer to null, override allocateBuffer, use non-slice retained buffer, use deflater.finished. Update fabric dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.4-SNAPSHOT'
+	id 'fabric-loom' version '0.5-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -74,4 +74,8 @@ publishing {
 		// uncomment to publish to the local maven
 		// mavenLocal()
 	}
+}
+
+minecraft {
+	accessWidener "src/main/resources/taternetworking.accesswidener"
 }
